WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59747
Web Inspector: REGRESSION(85051): Develop Menu items are wrong when inspector is frontmost window
https://bugs.webkit.org/show_bug.cgi?id=59747
Summary
Web Inspector: REGRESSION(85051): Develop Menu items are wrong when inspector...
Brian Weinstein
Reported
2011-04-28 15:17:47 PDT
http://trac.webkit.org/changeset/85051
broke Safari's Develop Menu when the Inspector was frontmost. The removed code in WebInspectorClient.cpp was used.
Attachments
[PATCH] Revert part of r85051
(3.26 KB, patch)
2011-04-28 15:25 PDT
,
Brian Weinstein
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2011-04-28 15:25:45 PDT
Created
attachment 91566
[details]
[PATCH] Revert part of
r85051
Brian Weinstein
Comment 2
2011-04-28 15:34:17 PDT
Landed in
r85250
.
WebKit Review Bot
Comment 3
2011-04-28 15:53:13 PDT
http://trac.webkit.org/changeset/85250
might have broken WinCE Release (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug