Web Inspector: REGRESSION(85051): Develop Menu items are wrong when inspector is frontmost window https://bugs.webkit.org/show_bug.cgi?id=59747

Reviewed by Timothy Hatcher.

Restore functions that were removed in r85051. They were needed when the inspector is the frontmost window.
Also update them to call _inspectedWebView.get() - since it's a RetainPtr now.

* WebCoreSupport/WebInspectorClient.mm:
(-[WebInspectorWindowController showWebInspector:]):
(-[WebInspectorWindowController showErrorConsole:]):
(-[WebInspectorWindowController toggleDebuggingJavaScript:]):
(-[WebInspectorWindowController toggleProfilingJavaScript:]):
(-[WebInspectorWindowController validateUserInterfaceItem:]):



Canonical link: https://commits.webkit.org/74961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85250 268f45cc-cd09-0410-ab3c-d52691b4dbfc